--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwindcss -i ./input.css -o ./dist/output.css --watch"
-  },
+  "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+  "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
